2008-12-15  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.19.3 ===

2008-12-12  Dan Winship  <danw@gnome.org>

	* pltcheck.sh: make this work on x86_64

2008-12-12  Ryan Lortie  <desrt@desrt.ca>

	* gio/gicon.c (g_icon_to_string_tokenized): free the tokens when done
	with them

2008-12-12  Ryan Lortie  <desrt@desrt.ca>

	* gio/gunixmounts.c (g_unix_mount_at): fix leak that occurs when
	multiple mount entries match the requested path

2008-12-10  Alexander Larsson  <alexl@redhat.com>

	Bug 562452 - Ensure we return G_IO_ERROR_CANCELLED if cancelling
	g_simple_async_result_run_in_thread
	
        * gsimpleasyncresult.c:
	Make g_simple_async_result_run_in_thread check cancellation before
	calling out to the user in the callback. This means we guarantee
	reporting cancels of async operations from the main threads, which
	is probably more in line with what users expect.
	
	Note that there are still no such guarantees for cancelling sync
	operations or cancelling async operation from outside the main
	thread. Furthermore, the exact behaviour of async implementations
	not using run_in_thread may differ.

2008-12-09  Alexander Larsson  <alexl@redhat.com>

	Bug 515777 - incorrect date&time on copy
	
        * glocalfile.c:
        (g_local_file_class_init):
	Copy mtime by default
	
        * gfile.c:
	Change docs about G_FILE_COPY_ALL_METADATA to not mention
	mtime as an example.

2008-12-08  Matthias Clasen  <mclasen@redhat.com>

	Bug 558298 – Hide ecryptfs mounts

	* gunixmounts.c: (guess_system_internal): Hide ecryptfs mounts, 
	so that the desktop does not show both the mount and the target 
	directory. Patch by Martin Pitt
 
2008-12-08  Matthias Clasen  <mclasen@redhat.com>

	Bug 555465 – GUnix{Input,Output}Stream lacks fd/close_fd_at_close 
	property

	* gio.symbols:
	* gunixinputstream.[hc]:
	* gunixoutputstream.[hc]: Add "fd" and "close-fd" properties
	including getters and setters. Patch by Maciej Piechotka
