@@ -49,7 +49,11 @@
  * #GUnixInputStream implements #GInputStream for reading from a
  * UNIX file descriptor, including asynchronous operations. The file
  * descriptor must be selectable, so it doesn't work with opened files.
- **/
+ *
+ * Note that <filename>&lt;gio/gunixinputstream.h&gt;</filename> belongs 
+ * to the UNIX-specific GIO interfaces, thus you have to use the 
+ * <filename>gio-unix-2.0.pc</filename> pkg-config file when using it.
+ */
 
 enum {
   PROP_0,
