@@ -63,7 +63,10 @@ static const char *_resolve_dev_root (void);
  * 
  * Routines for managing mounted UNIX mount points and paths.
  *
- **/
+ * Note that <filename>&lt;gio/gunixmounts.h&gt;</filename> belongs to the 
+ * UNIX-specific GIO interfaces, thus you have to use the 
+ * <filename>gio-unix-2.0.pc</filename> pkg-config file when using it.
+ */
 
 /*
  * GUnixMountType:
