@@ -1,3 +1,10 @@
+2008-12-31  Matthias Clasen <mclasen@redhat.com>
+
+	* gdesktopappinfo.c:
+	* gunixmounts.c:
+	* gunixinputstream.c:
+	* gunixoutputstream.c: Add a note about being UNIX-specific.
+
 2008-12-15  Matthias Clasen <mclasen@redhat.com>
 
 	* === Released 2.19.3 ===
